# color-debug

./: .travis.yml  CMakeLists.txt  ColorDebug.c  ColorDebug.h  ColorDebug.hpp  README.md
.github/workflows/: ci.yml
cmake/: COLOR_DEBUGConfig.cmake.in  ColorDebugOptions.cmake
cmake/template/: COLOR_DEBUGConfig.cmake.in  ColorDebugConfig.cmake.in
cmake/templates/: COLOR_DEBUGConfig.cmake.in
example/: CMakeLists.txt  exampleColorDebug.cpp
examples/: CMakeLists.txt  exampleColorDebug.c
examples/exampleColorDebugEmbedded/: CMakeLists.txt
examples/exampleColorDebugFindPackage/: CMakeLists.txt
examples/exampleColorDebugLocal/: CMakeLists.txt
examples/exampleColorDebugLocalHeader/: CMakeLists.txt
test/: main.cpp
